# pupdater

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  install_pupdater.py  manage.py  requirements.txt  tree.txt  update_tree kopie 2.py
.github/workflows/: publish.yml
dashboard/templates/home/: index.html
m_one/: asgi.py  install_pupdater.py  settings.py  urls.py  wsgi.py
pupdater/: pyproject.toml  views.py
pupdater.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pupdater/cli/: entrypoint.py
pupdater/install/: install_pupdater.py
pupdater/templates/pupdater/: pupdater_main.html
