[project]
name = "pupdater"
version = "1.1"
description = "ðŸ¾ Pupdater: A Django Admin pip manager."
authors = [
    {name = "Wilko Rietveld", email = "wilkorietveld@icloud.com"}
]
license = {text = "BSD-3-Clause"}
dependencies = ["django>=3.2"]

[project.scripts]
install_pupdater = "pupdater.install.install_pupdater:main"

[tool.setuptools.packages.find]
include = ["pupdater*"]
